--- a/04장/아이템_18/상속보다는_컴포지션을_사용하라.md
+++ b/04장/아이템_18/상속보다는_컴포지션을_사용하라.md
@@ -39,6 +39,9 @@ public class InstrumentedHashSet<E> extends HashSet<E> {
 }
 ```
 
+![image](https://github.com/user-attachments/assets/7653869c-8382-472c-a473-ebeb83a1a192)
+
+
 - 해당 main 코드의 결과는 6이 나온다.
 - super.addAll()에서 add를 실행하는데, 오버라이딩 한 곳에서도 addCount++ 가 동작되기 때문이다.
 - 위와 같이 메서드 오버라이딩으로 부모 클래스의 메서드를 재정의하면서, 의도치 않게 부모 클래스의 동작을 깰 수 있음
