--- a/04장/아이템_15/클래스와_멤버의_접근_권한을_최소화하라.md
+++ b/04장/아이템_15/클래스와_멤버의_접근_권한을_최소화하라.md
@@ -26,7 +26,7 @@
   * package-private  &rarr; `내부 구현체`, public  &rarr; `공개 API`
   * public으로 선언하면 API가 되므로 하위 호환성(하위 버전)을 유지하려면 <b>영원히 관리해야 한다.</b>
     * 한번 공유된 API는 쉽게 바꿀 수 없다. 클라이언트 어디에서 사용하는지 알 수 없기 때문.     
-      <br>(실제로 Spring HATEOAS라는 프로젝트에서도 바뀌었다.)
+      (실제로 Spring HATEOAS라는 프로젝트에서도 바뀌었다.)
   * 패키지 외부에서 쓰지 않을 클래스나 인터페이스라면 package-private으로 선언한다.
 * 한 클래스에서만 사용하는 package-private 클래스나 인터페이스는 해당 클래스에 private-static으로 중첩 시키자.
 
